--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "front/back"]
-	path = front/back
+[submodule "back"]
+	path = back
 	url = https://github.com/bobe974/product-backend-Ashop.git
